Used flexbox on the .pastry and .counter Classes to ensure the images were horizontally aligned with equal spacing.

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@ body {
   }
   
   .counter {
+    display: flex;
+    justify-content: space-around;
     background-color: #e5e5f7;
     opacity: 0.8;
     background-image: repeating-linear-gradient(45deg, #f74545 25%, transparent 25%, transparent 75%, #f74545 75%, #f74545), repeating-linear-gradient(45deg, #f74545 25%, #e5e5f7 25%, #e5e5f7 75%, #f74545 75%, #f74545);
@@ -22,11 +24,13 @@ body {
   }
   
   .pastry {
+    display: flex;
+    flex-direction: column;
     color: #533117;
     padding: 20px;
     border-radius: 50%;
     font-size: 18px;
-    position: absolute; 
+    align-items: center; 
   }
   
   .pastry img {
